--- a/backend/objectbasedoutcome/pom.xml
+++ b/backend/objectbasedoutcome/pom.xml
@@ -26,6 +26,12 @@
 			<groupId>org.springframework.cloud</groupId>
 			<artifactId>spring-cloud-starter-netflix-eureka-client</artifactId>
 		</dependency>
+		<dependency>
+			<groupId>com.shohaib</groupId>
+			<artifactId>core</artifactId>
+			<version>1.0.0</version>
+		</dependency>
+
 
 		<!-- Web Starter -->
 		<dependency>
