--- a/backend/Core/pom.xml
+++ b/backend/Core/pom.xml
@@ -81,6 +81,14 @@
             <artifactId>java-jwt</artifactId>
             <version>3.10.3</version>
         </dependency>
+        <dependency>
+            <groupId>org.jsoup</groupId>
+            <artifactId>jsoup</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-actuator</artifactId>
+        </dependency>
     </dependencies>
 
     <dependencyManagement>
@@ -97,6 +105,12 @@
                 <artifactId>java-jwt</artifactId>
                 <version>4.4.0</version>
             </dependency>
+            <dependency>
+                <groupId>org.jsoup</groupId>
+                <artifactId>jsoup</artifactId>
+                <version>1.17.2</version> <!-- or latest -->
+            </dependency>
+
         </dependencies>
     </dependencyManagement>
 
