--- a/backend/objectbasedoutcome/pom.xml
+++ b/backend/objectbasedoutcome/pom.xml
@@ -19,6 +19,14 @@
 		<java.version>17</java.version>
 		<spring-cloud.version>2023.0.3</spring-cloud.version>
 	</properties>
+	<repositories>
+		<repository>
+			<id>repsy</id>
+			<url>https://repo.repsy.io/mvn/shohaib/shohaib</url>
+		</repository>
+	</repositories>
+
+
 
 	<dependencies>
 		<!-- Eureka Client -->
@@ -85,12 +93,6 @@
 			<groupId>org.springframework.cloud</groupId>
 			<artifactId>spring-cloud-openfeign-core</artifactId>
 		</dependency>
-		<dependency>
-			<groupId>org.jsoup</groupId>
-			<artifactId>jsoup</artifactId>
-			<version>1.17.2</version> <!-- or latest -->
-		</dependency>
-
 	</dependencies>
 
 	<!-- Spring Cloud BOM -->
