--- a/backend/objectbasedoutcome/pom.xml
+++ b/backend/objectbasedoutcome/pom.xml
@@ -39,9 +39,10 @@
 			<artifactId>CORE</artifactId>
 			<version>1.0.4</version>
 		</dependency>
-
-
-
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-security</artifactId>
+		</dependency>
 		<!-- Web Starter -->
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
